deploy.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ns-a
  labels:
    team: a
---
kind: Namespace
apiVersion: v1
metadata:
  name: ns-b
  labels:
    team: b
---
kind: Namespace
apiVersion: v1
metadata:
  name: ns-c
  labels:
    team: c
---
apiVersion: v1
kind: Pod
metadata:
  name: poda
  namespace: ns-a
  labels:
    team: a
spec:
  containers:
  - name: containera
    image: nginx
    ports:
    - containerPort: 80
    resources: 
---
apiVersion: v1
kind: Pod
metadata:
  name: podb
  namespace: ns-b
  labels:
    team: b
spec:
  containers:
  - name: containerb
    image: nginx
    ports:
    - containerPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: podc
  namespace: ns-c
  labels:
    team: c
spec:
  containers:
  - name: containerc
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: ns-a
  labels:
    app: frontend
spec:
  containers:
  - name: frontend
    image: nginx
    ports:
    - containerPort: 80
